# eudev

./: .gitignore  .travis.yml  BUILD  CONTRIBUTING  LEGACY  Makefile-man.am  Makefile.am  NOTES  README  README.md  UPSTREAM-206-commit-todo  UPSTREAM.notes  autogen.sh  configure.ac
.github/workflows/: build.yml
docs/: Makefile.am
docs/gudev/: Makefile.am
docs/libudev/: Makefile.am  version.xml.in
hwdb/: 20-OUI.hwdb  20-pci-vendor-model.hwdb  20-usb-vendor-model.hwdb  60-keyboard.hwdb  60-sensor.hwdb  70-mouse.hwdb  Makefile.am
keymaps/: Makefile.README  Makefile.am
keymaps-force-release/: Makefile.am
man/: Makefile.am  custom-man.xsl  hwdb.7  make.sh  sd_id128_randomize.xml  udev.7  udev.conf.5  udev.conf.xml  udev.xml  udevadm.8  udevadm.xml  udevd.8  udevd.xml
rule_generator/: Makefile.am  rule_generator.functions  write_cd_rules.in  write_net_rules.in
rules/: 40-mem-null.rules  42-usb-hid-pm.rules  50-udev-default.rules  60-block.rules  60-evdev.rules  60-persistent-storage.rules  64-btrfs.rules.in  75-probe_mtd.rules  78-sound-card.rules  80-drivers-modprobe.rules  80-drivers.rules  80-net-name-slot.rules  95-keyboard-force-release.rules  95-keymap.rules  Makefile.am
src/: Makefile.am
src/accelerometer/: Makefile.am  accelerometer  accelerometer.c
src/ata_id/: Makefile.am  ata_id.c
src/basic/: build.h  missing.h  missing_syscall.h  process-util.c  unit-name.c  unit-name.h
src/cdrom_id/: Makefile.am  cdrom_id.c
src/collect/: Makefile.am  collect.c
src/dmi_memory_id/: Makefile.am  dmi_memory_id.c
src/fido_id/: Makefile.am  fido_id.c
src/gudev/: Makefile.am  gudev-1.0.pc.in  gudev.h  gudevdevice.c  gudevenumtypes.c  gudevenumtypes.h  gudevmarshal.c  gudevmarshal.h
src/include/: Makefile.am
src/keymap/: Makefile.am  check-keymaps.sh  check-keymaps.sh.in  keymap.c
src/libudev/: Makefile.am  cgroup-util.c  cgroup-util.h  conf-files.c  conf-files.h  def.h  device-nodes.c  env-util.c  env-util.h  exit-status.c  exit-status.h  fileio.c  fileio.h  hashmap.c  hashmap.h  libudev-device-private.c  libudev-device.c  libudev-enumerate.c  libudev-hwdb-def.h  libudev-hwdb.c  libudev-monitor.c  libudev-private.h  libudev-queue-private.c  libudev-queue.c  libudev-util.c  libudev.c  libudev.h  libudev.pc.in  libudev.sym  log.c  log.h  macro.h  missing.h  path-util.c  path-util.h  set.c  set.h  socket-util.h  sparse-endian.h  strv.c  (+9 more)
src/libudev-legacy/: Makefile.am  libudev.c
src/mtd_probe/: Makefile.am  mtd_probe.c  mtd_probe.h  probe_smartmedia.c
src/scsi_id/: Makefile.am  scsi.h  scsi_id.c  scsi_id.h  scsi_serial.c
src/shared/: Makefile.am  MurmurHash2.c  MurmurHash2.h  audit.h  cgroup-util.c  cgroup-util.h  conf-files.c  conf-files.h  def.h  dev-setup.c  dev-setup.h  device-nodes.c  device-nodes.h  exit-status.c  exit-status.h  fileio.c  fileio.h  formats-util.h  hashmap.c  hashmap.h  ioprio.h  label.c  label.h  log.c  log.h  macro.h  missing.h  mkdir-label.c  mkdir.c  mkdir.h  path-util.c  path-util.h  random-util.c  selinux-util.c  selinux-util.h  set.c  set.h  siphash24.c  siphash24.h  smack-util.c  (+15 more)
src/test/: Makefile.am  test-libudev.c  test-udev.c
src/udev/: Makefile.am  label.c  label.h  logind-acl.c  missing.h  mkdir.c  mkdir.h  path-util.c  path-util.h  sd-daemon.c  sd-daemon.h  smack-util.c  smack-util.h  udev-builtin-blkid.c  udev-builtin-firmware.c  udev-builtin-hwdb.c  udev-builtin-input_id.c  udev-builtin-keyboard.c  udev-builtin-kmod.c  udev-builtin-net_id.c  udev-builtin-path_id.c  udev-builtin-uaccess.c  udev-builtin-usb_id.c  udev-builtin.c  udev-ctrl.c  udev-event.c  udev-node.c  udev-rules.c  udev-watch.c  udev.h  udev.pc.in  udevadm-hwdb.c  udevadm-info.c  udevadm-monitor.c  udevadm-settle.c  udevadm-test-builtin.c  udevadm-test.c  udevadm-trigger.c  udevadm.c  udevd.c  (+2 more)
src/udev/accelerometer/: Makefile.am
src/udev/cdrom_id/: Makefile.am
src/udev/keymap/: Makefile.am
src/udev/mtd_probe/: Makefile.am
src/udev/scsi_id/: Makefile.am
src/v4l_id/: Makefile.am  v4l_id.c
test/: Makefile.am  rule-syntax-check.py  test-device-nodes.c  test-libudev.c  test-udev.c  test-utf8.c  udev-test.pl
test/TEST-01-BASIC/: test.sh
